// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpesnsesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should render ExpesnsesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23,234.25
  </h1>
</div>
`;
